--- a/libreria_virtual/templates_base/base.html
+++ b/libreria_virtual/templates_base/base.html
@@ -34,8 +34,8 @@
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-6">
                         <div class="text-center my-5">
-                            <h1 class="display-5 fw-bolder text-white mb-2">Sean bienvenidos a su librería digital</h1>
-                            <p class="lead text-white-50 mb-4">Un espacio para crear y compartir contenido literario.</p>
+                            <h1 class="display-5 fw-bolder text-black mb-2">Sean bienvenidos a su librería digital</h1>
+                            <p class="lead text-black mb-4">Un espacio para crear y compartir contenido literario.</p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'lista_libros' %}">Libros</a>
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'lista_autores' %}">Autores</a>
