--- a/libreria_virtual/templates_base/base.html
+++ b/libreria_virtual/templates_base/base.html
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
-                        <a class="btn btn-primary" href="#">REGISTRARSE</a>
+                        <a class="btn btn-primary" href="{% url 'registro' %}">REGISTRARSE</a>
                     </ul>
                 </div>
             </div>
