--- a/libreria_virtual/templates_base/base.html
+++ b/libreria_virtual/templates_base/base.html
@@ -22,8 +22,9 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
+                        <a class="btn btn-primary" href="{% url 'inicio' %}">Inicio</a>
                         <a class="btn btn-primary" href="{% url 'registro' %}">REGISTRARSE</a>
+                        <a class="btn btn-primary" href="{% url 'login' %}">Iniciar Sesión</a>
                     </ul>
                 </div>
             </div>
