--- a/libreria_virtual/templates_base/base.html
+++ b/libreria_virtual/templates_base/base.html
@@ -24,7 +24,21 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <a class="btn btn-primary" href="{% url 'inicio' %}">Inicio</a>
                         {% if user.is_authenticated %}
-                        <a class="btn btn-primary" href="{% url 'logout' %}">Cerrar Sesión</a>
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                <div style="display: inline-flex;">
+                                    <span>{{ user.username }}</span>
+                                </div>
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'editar_perfil' %}">Editar mis datos</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'logout' %}"><strong>Cerrar Sesión</strong></a>
+                                </li>
+                            </ul>
+                        </div>                 
                         {% else %}
                         <a class="btn btn-primary" href="{% url 'registro' %}">Registrarse</a>
                         <a class="btn btn-primary" href="{% url 'login' %}">Iniciar Sesión</a>
