--- a/libreria_virtual/templates_base/inicio.html
+++ b/libreria_virtual/templates_base/inicio.html
@@ -6,4 +6,5 @@ Inicio
 
 {% block contenido %}
 <h1>¡Hola, {{user.get_full_name}}!</h1>
+<img src="{{ user.avatar.imagen.url }}" />
 {% endblock contenido %} 
