--- a/libreria_virtual/templates_base/base.html
+++ b/libreria_virtual/templates_base/base.html
@@ -23,6 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <a class="btn btn-primary" href="{% url 'inicio' %}">Inicio</a>
+                        
                         {% if user.is_authenticated %}
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -62,6 +63,7 @@
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'lista_libros' %}">Libros</a>
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'lista_autores' %}">Autores</a>
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'lista_generos' %}">Géneros</a>
+                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'about_me' %}">About</a>
                             </div>
                         </div>
                     </div>
